# edgar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  docker-compose.yaml  pyproject.toml
common/: utils.py
docs/: Makefile  conf.py  example.ipynb  make.bat
edgar/: config.ini  edgar.py  edgarhist.py  graph.py
reference/: sic_code.csv
sql/: create_index.sql  edges_cik_cusip.sql  edges_cik_sic.sql  nodes_cik.sql  nodes_cusip.sql  nodes_sic.sql
sql/bak/: nodes_cusip.sql
src/edgar/: __init__.py  cns.py  edgar.py  run.py  thirteenf.py  utils.py
tests/: test_edgar.py  test_edgarhist.py  test_utils.py
