[tool.poetry]
name = "edgar"
version = "0.1.0"
description = "Edgar Download tools"
authors = ["Geo Varkey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
psycopg = "^3.1.13"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
runexport = 'edgar.graph:run'
runextract= 'edgar.edgarhist:run'