[project]
name = "edgar"
version = "0.1.0"
description = ""
authors = [
    {name = "Geo Varkey",email = "geo.varkey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "duckdb (>=1.2.0,<2.0.0)",
    "pyiceberg (>=0.8.1,<0.9.0)"
]

[tool.poetry]
packages = [{include = "edgar", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
tf = 'edgar.run:run_thirteenf'